oriterm_core/tests/vttest/snapshots/vttest__menu5__80x24_05_led_04.snap
---
source: oriterm_core/tests/vttest/menu5.rs
expression: text
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
These LEDs ("lamps") on the keyboard should be on: L1 L2                        
                                                                                
Push <RETURN>
