oriterm_core/tests/vttest/snapshots/vttest__menu5__97x33_05_led_02.snap
---
source: oriterm_core/tests/vttest/menu5.rs
expression: text
---
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
These LEDs ("lamps") on the keyboard should be on:    L2 L3 L4                                   
                                                                                                 
Push <RETURN>
